--- a/projects/tyndp2018/analysis.ipynb
+++ b/projects/tyndp2018/analysis.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,8 @@
     "                'East': ['PL', 'HU', 'CZ', 'SK', 'LV', 'LT', 'EE'],\n",
     "                'South': ['HR', 'GR', 'BG', 'RO']}\n",
     "\n",
-    "cases = ['nositing_EU_1.0_excap',  'siting_2018_EU_1.0_xi0.5flat1.0']\n",
-    "cases_short = [\"full\", 'xi0.5flat1.0']# 'orangebars', 'oneszeros']"
+    "cases = ['nositing_EU_1.0_excap']\n",
+    "cases_ = [\"full\"]# 'orangebars', 'oneszeros']"
    ]
   },
   {
@@ -59,14 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:pypsa.io:Imported network  has buses, carriers, generators, links, loads, storage_units\n",
       "INFO:pypsa.io:Imported network  has buses, carriers, generators, links, loads, storage_units\n"
      ]
     }
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -102,26 +101,26 @@
      "output_type": "stream",
      "text": [
       "[0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]\n",
-      "          full  xi0.5flat1.0\n",
-      "vars     15.79         11.21\n",
-      "cons     15.62         11.04\n",
-      "nz       47.65         33.90\n",
-      "time  25014.00      16713.00\n",
-      "obj   97675.00      98537.00\n"
+      "          full\n",
+      "vars     15.79\n",
+      "cons     15.62\n",
+      "nz       47.65\n",
+      "time  25014.00\n",
+      "obj   97675.00\n"
      ]
     }
    ],
    "source": [
     "# Problem size/objective comparison\n",
-    "solver_logs = dict.fromkeys(cases_short)\n",
-    "for i, case in enumerate(cases_short):\n",
+    "solver_logs = dict.fromkeys(cases_)\n",
+    "for i, case in enumerate(cases_):\n",
     "    output_dir = f'../../output/paper/new_potentials/{cases[i]}/'\n",
     "    solver_logs[case] = open(f\"{output_dir}solver.log\", \"r\")\n",
     "\n",
     "print([0.5]*len(net.buses))\n",
     "    \n",
-    "df_perf = pd.DataFrame(index=['vars', 'cons', 'nz', 'time', 'obj'], columns=cases_short, dtype=float)\n",
-    "for case in cases_short:\n",
+    "df_perf = pd.DataFrame(index=['vars', 'cons', 'nz', 'time', 'obj'], columns=cases_, dtype=float)\n",
+    "for case in cases_:\n",
     "    f = solver_logs[case]\n",
     "    for line in f:\n",
     "        if \"Barrier solved model\" in line:\n",
@@ -144,44 +143,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                             full  xi0.5flat1.0\n",
-      "ccgt                     0.071441      0.071441\n",
-      "load                     3.000000      3.000000\n",
-      "pv_residential_national  0.001800      0.001800\n",
-      "pv_utility_national      0.001800      0.001800\n",
-      "ror                      0.008100      0.008100\n",
-      "wind_onshore_national    0.001400      0.001400\n",
-      "wind_offshore_national   0.003000      0.003000\n",
-      "                   full  xi0.5flat1.0\n",
-      "Generation    77.682614     77.825660\n",
-      "Transmission  11.487050     11.786470\n",
-      "Storage        3.046961      3.086395\n",
-      "Total         92.217000     92.699000\n"
+      "nuclear\n",
+      "Cost per GW:\n",
+      "                              full\n",
+      "AC                       72.500000\n",
+      "DC                       65.000000\n",
+      "ccgt                     61.000000\n",
+      "Li-ion                   78.200000\n",
+      "load                      0.000000\n",
+      "pv_residential_national  36.500000\n",
+      "pv_utility_national      24.100000\n",
+      "nuclear                   0.000000\n",
+      "phs                      38.520000\n",
+      "ror                            NaN\n",
+      "sto                            NaN\n",
+      "wind_onshore_national    64.600000\n",
+      "wind_offshore_national   89.533333\n",
+      "Cost per TWh:\n",
+      "                             full\n",
+      "AC                          0.000\n",
+      "DC                          0.000\n",
+      "ccgt                       71.441\n",
+      "Li-ion                      0.270\n",
+      "load                     3000.000\n",
+      "pv_residential_national     1.800\n",
+      "pv_utility_national         1.800\n",
+      "nuclear                     0.000\n",
+      "phs                         0.270\n",
+      "ror                         8.100\n",
+      "sto                         6.000\n",
+      "wind_onshore_national       1.400\n",
+      "wind_offshore_national      3.000\n"
      ]
     }
    ],
    "source": [
-    "# Costs of generators\n",
-    "techs = [\"ccgt\", \"load\", \"pv_residential_national\", \"pv_utility_national\", \"ror\",\n",
+    "# Technologies costs\n",
+    "techs = [\"AC\", \"DC\", \"ccgt\", \"Li-ion\", \"load\",\n",
+    "         \"pv_residential_national\", \"pv_utility_national\",\n",
+    "         \"nuclear\", \"phs\", \"ror\", \"sto\",\n",
     "         \"wind_onshore_national\", \"wind_offshore_national\"]\n",
-    "costs_1 = pd.DataFrame(0., index=techs, columns=cases_short)\n",
-    "for case in cases_short:\n",
+    "cap_tech_costs = pd.DataFrame(0., index=techs, columns=cases_)\n",
+    "mar_tech_costs = pd.DataFrame(0., index=techs, columns=cases_)\n",
+    "for case in cases_:\n",
     "    net = nets[case]\n",
     "    for tech in techs:\n",
-    "        cost = net.generators[net.generators.type == tech].marginal_cost.unique()\n",
-    "        if len(cost) != 0:\n",
-    "            costs_1.loc[tech, case] = cost[0]\n",
+    "        if tech in [\"AC\", \"DC\", \"HVAC_OHL\"]:\n",
+    "            # Line cost per 1000km and 1GW\n",
+    "            links = net.links[net.links.carrier == tech]\n",
+    "            cap_cost = (links[\"capital_cost\"]/links.length).unique()*1000\n",
+    "            mar_cost = (links[\"marginal_cost\"]/links.length).unique()*1000\n",
+    "        elif tech in [\"Li-ion\", \"phs\", \"sto\"]:\n",
+    "            cap_cost = net.storage_units[net.storage_units.type == tech][\"capital_cost\"].unique()\n",
+    "            mar_cost = net.storage_units[net.storage_units.type == tech][\"marginal_cost\"].unique()\n",
+    "        else:\n",
+    "            cap_cost = net.generators[net.generators.type == tech][\"capital_cost\"].unique()\n",
+    "            mar_cost = net.generators[net.generators.type == tech][\"marginal_cost\"].unique()\n",
+    "        if len(cap_cost) != 0:\n",
+    "            cap_tech_costs.loc[tech, case] = cap_cost[0]\n",
+    "            mar_tech_costs.loc[tech, case] = mar_cost[0]\n",
     "        else:\n",
     "            print(tech)\n",
-    "print(costs_1)\n",
-    "\n",
+    "print(f\"Cost per GW:\\n{cap_tech_costs}\")\n",
+    "print(f\"Cost per TWh:\\n{mar_tech_costs*1000}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:numexpr.utils:NumExpr defaulting to 8 threads.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                             full\n",
+      "ccgt                     0.071441\n",
+      "load                     3.000000\n",
+      "pv_residential_national  0.001800\n",
+      "pv_utility_national      0.001800\n",
+      "ror                      0.008100\n",
+      "wind_onshore_national    0.001400\n",
+      "wind_offshore_national   0.003000\n",
+      "                   full\n",
+      "Generation    82.701695\n",
+      "Transmission  12.120695\n",
+      "Storage        2.852510\n",
+      "Total         97.675000\n"
+     ]
+    }
+   ],
+   "source": [
     "capex_opex = pd.DataFrame(index=[\"capex\", \"opex\"], columns=cases_short)\n",
     "costs_all = pd.DataFrame(index=[\"Generation\", \"Transmission\", \"Storage\"], columns=cases_short, dtype=float)\n",
     "for case in cases_short:\n",
